force-app/main/default/objects/BGBK__CartSettings__c/BGBK__CartSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Cart Settings</description>
    <label>Cart Settings</label>
</CustomObject>