force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Allow_Existing_Receipt__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Allow_Existing_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow user to choose from existing Receipts as method of payment</description>
    <label>Allow Paying with Existing Receipt</label>
    <type>Checkbox</type>
</CustomField>