force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Allow_Multiple_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Allow_Multiple_Payment_Methods__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow user to pay outstanding amount using multiple payment methods</description>
    <label>Allow Multiple Payment Methods</label>
    <type>Checkbox</type>
</CustomField>