force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Allow_Partial_Payments__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Allow_Partial_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow partial payments for amounts outstanding. Not applicable to Portal users.</description>
    <label>Allow Partial Payments</label>
    <type>Checkbox</type>
</CustomField>