force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Allow_Pay_By_Deposit__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Allow_Pay_By_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the payment by deposit option is shown on the cart</description>
    <label>Allow Pay By Deposit</label>
    <type>Checkbox</type>
</CustomField>