force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Cart_Expiration_Hours__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Cart_Expiration_Hours__c</fullName>
    <description>The duration in hours for which the cart will be active.</description>
    <label>Manual Cart Expiration Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>