force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Enable_Cashier_Cart__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Enable_Cashier_Cart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Cashier Cart</label>
    <type>Checkbox</type>
</CustomField>