force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Enable_High_Volume__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Enable_High_Volume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable High Volume</label>
    <type>Checkbox</type>
</CustomField>