force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Payable_Parents__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payable_Parents__c</fullName>
    <description>List of object API names whose Fees can be paid (e.g. Lien__c, Obj1__c). Super parents and Invoices need not be included.</description>
    <inlineHelpText>List of object API names whose Fees can be paid (e.g. Lien__c, Obj1__c). Super parents and Invoices need not be included.</inlineHelpText>
    <label>Payable Parents</label>
    <type>TextArea</type>
</CustomField>