force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Payment_Gateway_Credentials__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment_Gateway_Credentials__c</fullName>
    <description>Credentials for communication with Payment Gateway.</description>
    <label>Payment Gateway Credentials</label>
    <type>TextArea</type>
</CustomField>