force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Payment_Gateway_Data_Encryption_Key__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment_Gateway_Data_Encryption_Key__c</fullName>
    <description>Needs to be 16 characters long. Otherwise will throw error.</description>
    <inlineHelpText>Needs to be 16 characters long. Otherwise will throw error. Example can be 'BasicGovPayments'</inlineHelpText>
    <label>Payment Gateway Data Encryption Key</label>
    <length>16</length>
    <type>Text</type>
</CustomField>