force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Payment_Gateway_Form_Post_URL__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment_Gateway_Form_Post_URL__c</fullName>
    <description>URL For form post to external payment gateway</description>
    <label>Payment Gateway Form Post URL</label>
    <type>Url</type>
</CustomField>