force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Payment_Gateway_Requires_Authentication__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment_Gateway_Requires_Authentication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether gateway requires authentication.</description>
    <label>Payment Gateway Requires Authentication</label>
    <type>Checkbox</type>
</CustomField>