force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Payment_Gateway_Requires_Credentials__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment_Gateway_Requires_Credentials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Gateway Requires Credentials</label>
    <type>Checkbox</type>
</CustomField>