force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Payment_Gateway_Requires_Initialization__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment_Gateway_Requires_Initialization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether payment gateway requires authentication.</description>
    <label>Payment Gateway Requires Initialization</label>
    <type>Checkbox</type>
</CustomField>