force-app/main/default/objects/BGBK__CartSettings__c/fields/BGBK__Payment_Gateway_Response_Protocol__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment_Gateway_Response_Protocol__c</fullName>
    <description>This field defines how the payment gateway communicates with BasicGov</description>
    <label>Payment Gateway Response Protocol</label>
    <type>TextArea</type>
</CustomField>